--- a/components/spacingpicker/spacingpicker.scss
+++ b/components/spacingpicker/spacingpicker.scss
@@ -83,12 +83,9 @@ $sp-thumb-size:     40px;
 
 .spacingpicker-panel
 {
-    position: absolute;
+    position: fixed;
     z-index: $sp-dropdown-z;
-    top: 100%;
-    left: 0;
     min-width: 160px;
-    margin-top: $sp-2;
     padding: $sp-4 0;
     border: $border-width solid var(--theme-border-color);
     background-color: var(--theme-surface-bg);
